--- a/README
+++ b/README
@@ -7,7 +7,9 @@ examples:
 $ python/3.5.2 REST.py Glioblastoma TP53,PTEN,PIK3CA
 $ python/3.5.2 REST.py Breast\ Invasive\ Carcinoma TP53 
 
-This is an interface to cBioPortal to extract TCGA Mutation Data of particular Cancer for Gene(s). Takes any cancer and gene into consideration and provides summary of number of unique AminoAcid_Change per Gene. Output is created in the directory where command is executed.
+This is an interface to cBioPortal to extract TCGA Mutation Data of particular Cancer for Gene(s). Takes any cancer and 
+gene into consideration and provides summary of number of unique AminoAcid_Change per Gene. Output is created in 
+the directory where command is executed.
 
 2. ExtractVariables.py
 cmd: python/3.5.2 ExtractVariables.py bed_file fasta_file Mismatch
@@ -19,9 +21,11 @@ examples:
 $ python/3.5.2 ExtractVariables.py cpd.bed cpd.fasta 2
 $ python/3.5.2 ExtractVariables.py cpd.bed cpd.fasta 1
 
-This function extracts part of sequence excluding reverse and forward primers. As a result it provides a tab-delimited file showing Sequence_with_Primers and Extracted_Sequence/Variable_after_Removing_Primers.
+This function extracts part of sequence excluding reverse and forward primers. As a result it provides a tab-delimited 
+file showing Sequence_with_Primers and Extracted_Sequence/Variable_after_Removing_Primers.
 
-It applies generic string match function GetPrimerPositions(sequence, mismatch, primer) which matches primer sequence taking tolerance into consideration and provide primer positions based on which the sequence of interest is extracted.
+It applies generic string match function GetPrimerPositions(sequence, mismatch, primer) which matches primer sequence 
+taking tolerance into consideration and provide primer positions based on which the sequence of interest is extracted.
 
 Basis:
 - If both primers do not match it considers the sequence as a variable itself
@@ -46,9 +50,11 @@ examples:
 $ python/3.5.2 Extract_Variables\(REGEX\).py cpd.bed cpd.fasta 2
 $ python/3.5.2 Extract_Variables\(REGEX\).py cpd.bed cpd.fasta 1
 
-This function extracts part of sequence excluding reverse and forward primers. As a result it provides a tab-delimited file in format : 'Sequence','VariableString_Mimatch-0','VariableString_Mismatch-1','VariableString_Mismatch-2'.
+This function extracts part of sequence excluding reverse and forward primers. As a result it provides a tab-delimited 
+file in format : 'Sequence','VariableString_Mimatch-0','VariableString_Mismatch-1','VariableString_Mismatch-2'.
 
-This function is it uses python REGEX and will provide list of sequence excluding primers until it reaches mismatch tolerance provided by user.
+This function is it uses python REGEX and will provide list of sequence excluding primers until it reaches mismatch 
+tolerance provided by user.
 
 Basis:
 - re.complie(primer).finditer(sequence)- provides (start,end) for FWD and REV primer.
